landing: fix: main header letters over each other on small viewports

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -19,7 +19,7 @@
   color: #fff;
   margin: auto;
   font-size: 50px;
-
+  line-height: normal;
 }
 
 h1 {
